Backport PR #31392: DOC: Fix image alignment (#31394)

--- a/doc/source/_static/css/pandas.css
+++ b/doc/source/_static/css/pandas.css
@@ -12,10 +12,6 @@
   /*min-height: 150px; */
 }
 
-.intro-card .card-img-top {
-  margin: 10px;
-}
-
 .custom-button {
   background-color: #dcdcdc;
   border: none;
